# pyODIN

./: README.md  pyproject.toml
src/py_odin/: __init__.py  py_odin.py
