[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_odin"
version = "0.1.0"
description = "pyODIN cell-type annotation tool"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Siddharth S. Tomar" },
]
keywords = ["single-cell", "scRNA-seq", "cell-type annotation", "scanpy", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bioinformatics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=2.2.6,<2.5",
    "pandas==2.3.3",
    "scanpy>=1.11.5,<1.13",
    "scipy>=1.15.3,<1.19",
    "igraph==1.0.0",
    "lightgbm==4.6.0",
    "leidenalg==0.12.0",
    "muon==0.1.7",
    "openpyxl==3.1.5",
    "scikit-learn>=1.7.2,<1.10",
]

[project.optional-dependencies]
ml = [
    "lightgbm",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/SondergaardLab/pyODIN"
Repository = "https://github.com/SondergaardLab/pyODIN"

[tool.setuptools.packages.find]
where = ["src"]
